--- a/example/Gemfile
+++ b/example/Gemfile
@@ -2,10 +2,10 @@
 
 source 'https://rubygems.org'
 
-gem 'byebug'
 gem 'prometheus-client'
-gem 'yabeda-http_requests', path: '/gem'
 gem 'yabeda-prometheus'
+gem 'yabeda-http_requests',
+    git: 'https://github.com/dsalahutdinov/yabeda-http_requests'
 
 gem 'puma'
 gem 'rack'
