Prevent memory bloat by limiting sniffer storage capacity

--- a/example/Gemfile
+++ b/example/Gemfile
@@ -3,8 +3,7 @@
 source 'https://rubygems.org'
 
 gem 'prometheus-client'
-gem 'yabeda-http_requests',
-    git: 'https://github.com/dsalahutdinov/yabeda-http_requests'
+gem 'yabeda-http_requests'
 gem 'yabeda-prometheus'
 
 gem 'puma'
