--- a/example/Gemfile
+++ b/example/Gemfile
@@ -7,7 +7,8 @@ gem 'yabeda-http_requests'
 gem 'yabeda-prometheus'
 
 gem 'puma'
-gem 'rack'
+gem 'rack', '~> 2.2'
+gem 'webrick'
 gem 'sidekiq'
 
 gem 'faraday', require: false
